argo-events-demo/assets/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-server
spec:
  selector:
    matchLabels:
      app: argo-server
  template:
    metadata:
      labels:
        app: argo-server
    spec:
      serviceAccountName: argo-server
      containers:
        - name: argo-server
          image: quay.io/argoproj/argocli:latest
          securityContext:
            capabilities:
              drop:
                - ALL
          args: [ server ]
          ports:
            - name: web
              containerPort: 2746
          readinessProbe:
            httpGet:
              port: 2746
              scheme: HTTPS
              path: /
            initialDelaySeconds: 10
            periodSeconds: 20
          volumeMounts:
            - mountPath: /tmp
              name: tmp
      volumes:
        - name: tmp
          emptyDir: { }
      securityContext:
        runAsNonRoot: true
      nodeSelector:
        kubernetes.io/os: linux
