argo-events-demo/assets/pulsar.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: pulsar
  annotations:
    ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/backend-protocol: https # ingress-nginx
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: pulsar
              servicePort: 8080
            #path: /argo(/|$)(.*)
            path: /pulsar
